content/partials/v1.9/releases/1.9.6.md
# 1.9.6 Release 🎉

{% note noteType="Tip" %}
**4th September 2025**
{% /note %}

You can find the GitHub release [here](https://github.com/open-metadata/OpenMetadata/releases/tag/1.9.6-release).

# Fixes

- Fix(test): tag spec flakiness
- Fix explore filter order
- Fix(test): fix flaky playwright tests
- Chore(UI): Fix advanced search playwright flakiness
- Chore(UI): Fix flaky playwright tests 
- SERVER_ENABLE_VIRTUAL_THREAD is marked false
- chore(ui): fix the flaky test around metric spec
- Fix Data Product to asset mapping lost after upgrade
- MINOR: Fix column lineage validation
- Fix Compilation issues due to change in imports for ResultList  
- Fix Metadata Tool
- Fix: Automator - Separating terms and tags in action config
- MINOR: Fix data insight index for multidomain
- Fix(test): increase timeout for data contract spec for AUTs 
- Fix(ui): tab label with persona assigned 
- Playwright: fixed flakiness in AddTestCaseNewFlow, Tour & Domains 
- Fixes: [Snowflake] Add custom host support for `View in Snowflake` source url

# Improvements

- Chore(UI): Refactor auth setup to avoid unnecessary logout and login operation
- Update user_mixin.py
- Fixes: Lineage improvements with multiprocessing, stored procedure level temp table processing and lineage filtering with db & schema
- Add ssl support to hive
- MINOR: Add Unstructured Formats Support to GCS Storage Connector
- MINOR: Make transient table ingestion enabled by default - snowflake 
- Feature: ServiceNow Connector 
- Fixes - Add support for sources key metadata fetch in dbt
- GlossaryTerm Search endpoint  
- Remove the sprark connector support from UI
- MINOR: Add support for clone queries in bigquery 
- Add Traditional Chinese translation 
- MINOR - Update translations 
- Chore(BE): update response code for docs & signin page

**Full Changelog**: [link](https://github.com/open-metadata/OpenMetadata/compare/1.9.5-release...1.9.6-release)
